@@ -2,6 +2,7 @@
 - Totally new layout for the configuration utility
 - Added a localization template
 - Italian translation adapted to the last changes again
+- Local installation shall not overwrite settings.json
 
 * Tue Mar 20 2012
 - optparse module replaced by the pygobject GOptionContext wrapper
